# cubecl

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yml
crates/cubecl/: Cargo.toml  build.rs
crates/cubecl-common/: Cargo.toml  README.md
crates/cubecl-core/: Cargo.toml
crates/cubecl-cpp/: Cargo.toml
crates/cubecl-cpp/src/shared/: unary.rs
crates/cubecl-cpu/: Cargo.toml
crates/cubecl-cuda/: Cargo.toml  README.md
crates/cubecl-hip/: Cargo.toml
crates/cubecl-ir/: Cargo.toml  README.md
crates/cubecl-macros/: Cargo.toml
crates/cubecl-macros-internal/: Cargo.toml  README.md
crates/cubecl-opt/: Cargo.toml  README.md
crates/cubecl-runtime/: Cargo.toml  README.md
crates/cubecl-spirv/: Cargo.toml
crates/cubecl-std/: Cargo.toml
crates/cubecl-wgpu/: Cargo.toml  README.md
crates/cubecl-wgpu/src/: lib.rs
crates/cubecl-zspace/: Cargo.toml
crates/cubecl/src/: lib.rs
examples/device_sharing/: Cargo.toml
examples/fusing/: Cargo.toml
examples/gelu/: Cargo.toml
examples/normalization/: Cargo.toml
examples/sum_things/: Cargo.toml
examples/tracing_example/: Cargo.toml
xtask/: Cargo.toml
xtask/src/commands/: build.rs  check.rs  test.rs
