[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "Temporary tensor4all fork of CubeCL core"
edition.workspace = true
keywords = []
license.workspace = true
name = "t4a-cubecl-core"
readme.workspace = true
repository = "https://github.com/tensor4all/cubecl/tree/main/crates/cubecl-core"
version.workspace = true


[lib]
name = "cubecl_core"


[lints]
workspace = true


[features]
default = ["cubecl-runtime/default", "cubecl-ir/default"]
export_tests = ["tempfile", "test-log/trace", "test-log/log", "std"]
std = ["cubecl-runtime/std", "cubecl-ir/std"]
template = []

tracing = ["dep:tracing", "cubecl-runtime/tracing", "cubecl-ir/tracing"]

[dependencies]
# Runtime Deps
log = { workspace = true }
test-log = { workspace = true, optional = true }
tracing = { workspace = true, features = ["attributes"], optional = true }

cubecl-ir = { package = "t4a-cubecl-ir", path = "../cubecl-ir", version = "0.10.0", default-features = false, features = [
    "serde",
] }
cubecl-runtime = { package = "t4a-cubecl-runtime", path = "../cubecl-runtime", version = "0.10.0", default-features = false }
cubecl-zspace = { package = "t4a-cubecl-zspace", path = "../cubecl-zspace", version = "0.10.0" }

bitflags = { workspace = true }
bytemuck = { workspace = true }
cubecl-common = { package = "t4a-cubecl-common", path = "../cubecl-common", version = "0.10.0", default-features = false }
cubecl-macros = { package = "t4a-cubecl-macros", path = "../cubecl-macros", version = "0.10.0", default-features = false }
derive-new = { workspace = true }
derive_more = { workspace = true, features = [
    "not",
    "add",
    "mul",
    "add_assign",
    "mul_assign",
    "display",
    "debug",
] }
enumset = { workspace = true }
float-ord = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
hashbrown = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { version = "3.20", optional = true }
variadics_please = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
trybuild = "1"
