[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Temporary tensor4all fork of CubeCL IR"
edition.workspace = true
keywords = []
license.workspace = true
name = "t4a-cubecl-ir"
readme = "README.md"
repository = "https://github.com/tensor4all/cubecl/tree/main/crates/cubecl-ir"
version.workspace = true


[lib]
name = "cubecl_ir"


[lints]
workspace = true


[features]
default = ["serde", "std"]

serde = ["dep:serde", "hashbrown/serde", "enumset/serde"]
std = []

tracing = ["cubecl-common/tracing"]

[dependencies]
cubecl-common = { package = "t4a-cubecl-common", path = "../cubecl-common", version = "0.10.0", default-features = false, features = [
    "fp4",
    "fp8",
] }
cubecl-macros-internal = { package = "t4a-cubecl-macros-internal", path = "../cubecl-macros-internal", version = "0.10.0" }

derive-new = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
enumset = { workspace = true }
float-ord = { workspace = true }
fnv = { workspace = true }
foldhash = { workspace = true }
half = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true, features = ["rc"] }
variadics_please = { workspace = true }

hashbrown = { workspace = true }
portable-atomic = { workspace = true }
