[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Temporary tensor4all fork of CubeCL internal procedural macros"
edition.workspace = true
keywords = []
license.workspace = true
name = "t4a-cubecl-macros-internal"
readme = "README.md"
repository = "https://github.com/tensor4all/cubecl/tree/main/crates/cubecl-macros-internal"
version.workspace = true

[lib]
name = "cubecl_macros_internal"
proc-macro = true


[lints]
workspace = true


[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
