[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Temporary tensor4all fork of CubeCL procedural macros"
edition.workspace = true
keywords = []
license.workspace = true
name = "t4a-cubecl-macros"
readme.workspace = true
repository = "https://github.com/tensor4all/cubecl/tree/main/crates/cubecl-macros"
version.workspace = true

[lib]
name = "cubecl_macros"
proc-macro = true


[lints]
workspace = true


[features]
debug_symbols = []
default = []
std = []

tracing = ["cubecl-common/tracing"]


[dependencies]
darling = { workspace = true }
derive-new = { workspace = true }
ident_case = { workspace = true }
inflections = "1"
prettyplease = "0.2"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

cubecl-common = { package = "t4a-cubecl-common", path = "../cubecl-common", version = "0.10.0", default-features = false }
