[package]
authors = ["Genna Wingert"]
categories = ["algorithms"]
description = "Temporary tensor4all fork of CubeCL compiler optimizations"
edition.workspace = true
keywords = ["gpu", "compiler"]
license.workspace = true
name = "t4a-cubecl-opt"
readme = "README.md"
repository = "https://github.com/tensor4all/cubecl/tree/main/crates/cubecl-opt"
version.workspace = true


[lib]
name = "cubecl_opt"


[lints]
workspace = true


[features]
default = ["std", "cubecl-common/default", "cubecl-ir/default"]
std = ["cubecl-common/std"]

tracing = ["cubecl-common/tracing", "cubecl-ir/tracing", "cubecl-core/tracing"]


[dependencies]
cubecl-common = { package = "t4a-cubecl-common", path = "../cubecl-common", version = "0.10.0", default-features = false }
cubecl-core = { package = "t4a-cubecl-core", path = "../cubecl-core", version = "0.10.0", default-features = false }
cubecl-ir = { package = "t4a-cubecl-ir", path = "../cubecl-ir", version = "0.10.0", default-features = false }

float-ord = "0.3"
log = "0.4"
num = "0.4"
petgraph = { version = "0.8" }
smallvec = { workspace = true }
stable-vec = { version = "0.4" }
type-map = { version = "0.5" }


[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
