[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
    "maxtremblay <t.maxime@pm.me>",
]
categories = ["science", "mathematics", "algorithms"]
description = "Temporary tensor4all fork of CubeCL standard library"
edition.workspace = true
keywords = []
license.workspace = true
name = "t4a-cubecl-std"
readme.workspace = true
repository = "https://github.com/tensor4all/cubecl/tree/main/crates/cubecl-std"
version.workspace = true


[lib]
name = "cubecl_std"


[lints]
workspace = true


[features]
default = []
export_tests = ["test-log/trace"]

tracing = [
    "cubecl-common/tracing",
    "cubecl-core/tracing",
    "cubecl-runtime/tracing",
]


[dependencies]
test-log = { workspace = true, optional = true }

cubecl-common = { package = "t4a-cubecl-common", path = "../cubecl-common", version = "0.10.0", features = [
    "hash",
], default-features = false }
cubecl-core = { package = "t4a-cubecl-core", path = "../cubecl-core", version = "0.10.0", default-features = false }
cubecl-runtime = { package = "t4a-cubecl-runtime", path = "../cubecl-runtime", version = "0.10.0", default-features = false }
half.workspace = true
num-traits = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
variadics_please = { workspace = true }

# no_std compat
spin = { workspace = true }


[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
