[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
    "maxtremblay <t.maxime@pm.me>",
    "crutcher <crutcher@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "Temporary tensor4all fork of CubeCL ZSpace library"
keywords = []
name = "t4a-cubecl-zspace"

edition.workspace = true
license.workspace = true
readme.workspace = true
repository = "https://github.com/tensor4all/cubecl/tree/main/crates/cubecl-zspace"
rust-version.workspace = true
version.workspace = true


[lib]
name = "cubecl_zspace"


[lints]
workspace = true


[features]
default = []
std = []

[dependencies]
smallvec = { workspace = true, features = ["serde"] }
serde = { workspace = true }
derive-new = { workspace = true }
