[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "Temporary tensor4all fork of CubeCL for tenferro-rs release preparation."
edition.workspace = true
keywords = ["gpu", "cuda", "wgpu", "gpgpu", "tensor"]
license.workspace = true
name = "t4a-cubecl"
readme.workspace = true
repository = "https://github.com/tensor4all/cubecl"
version.workspace = true


[lib]
name = "cubecl"


[lints]
workspace = true


[features]
autotune-checks = ["cubecl-runtime/autotune-checks"]
default = [
    "std",
    "stdlib",
    "cubecl-core/default",
    "cubecl-cuda?/default",
    "cubecl-wgpu?/default",
]
exclusive-memory-only = ["cubecl-wgpu?/exclusive-memory-only"]
std = ["cubecl-core/std", "cubecl-wgpu?/std", "cubecl-cuda?/std"]
stdlib = ["cubecl-std"] # CubeCL standard library
template = ["cubecl-core/template"]

profile-tracy = ["cubecl-runtime/profile-tracy", "cubecl-wgpu?/profile-tracy"]

tracing = [
    "cubecl-core/tracing",
    "cubecl-cuda?/tracing",
    "cubecl-wgpu?/tracing",
]

# Runtimes
cuda = ["cubecl-cuda"]
cuda-ptx-wmma = ["cubecl-cuda?/ptx-wmma"]
metal = ["wgpu-msl"]
webgpu = ["wgpu"]
wgpu = ["cubecl-wgpu"]
wgpu-msl = ["wgpu", "cubecl-wgpu/msl"]

# By default we use wgpu.
test-runtime = ["cubecl-wgpu"]

[dependencies]
cubecl-core = { package = "t4a-cubecl-core", path = "../cubecl-core", version = "0.10.0", default-features = false }
cubecl-cuda = { package = "t4a-cubecl-cuda", path = "../cubecl-cuda", version = "0.10.0", default-features = false, optional = true }
cubecl-ir = { package = "t4a-cubecl-ir", path = "../cubecl-ir", version = "0.10.0", default-features = false }
cubecl-runtime = { package = "t4a-cubecl-runtime", path = "../cubecl-runtime", version = "0.10.0", default-features = false }
cubecl-std = { package = "t4a-cubecl-std", path = "../cubecl-std", version = "0.10.0", optional = true }
cubecl-wgpu = { package = "t4a-cubecl-wgpu", path = "../cubecl-wgpu", version = "0.10.0", default-features = false, optional = true }
half = { workspace = true }
